2.4.2 -> 2.4.3:
	- implemented install time prerequisites
	- repaired %{#TAG} query format
	- implemented ternary operator as query expression

2.4.1 -> 2.4.2:
	- completely rewrote queryformat code
	- added fsnames, fssizes virtual query tags
	- added rpmdbFindByHeader() and rpmdbFindByTag() public functions
	- added rpmfilename tag to rpmrc to define the filename format to
	  use for binary packages (note the rpmdir is prepended to it)
	- used pclose() instead of fclose() in -t code
	- updated man pages
	- changed "struct rpmdb" to "struct rpmdb_s" for C++
	- netsharedpath entries shouldn't match partial directory names
	  anymore (a nersharedpath of /usr/lib shouldn't affect /usr/libexec)
	- don't backup config files on netsharedpaths (take 2)
	- added "day" query format which is like date, but doesn't print
	  any time
	- added --changelog alias to query a packages changelog entry
	- added mntctl() support for AIX (I think, I can't test this)
	- fflags query type displays 's' for specfiles, 'm' for missingok
	  files, and 'n' for noreplace files
	- implemented %config(missingok) flag in install
	- added --allfiles flag for -i and -U, which forces all files (even
	  missingok files) to be installed
	- implemented %config(noreplace) for the install, but it hasn't
	  been tested in any way
	- added i18n support to headers
	- added ppc/rs6000 differntiation for AIX
	- all IP* from uname() is changed to just IP
	- IP is considered the same as mips (not sgi)
	- added IRIX64 OS, it's compatible w/ IRIX

2.4 -> 2.4.1:
	- take advantage of lchown() if it's available
	- fixed configure script to assume chown() doesn't follow symlinks
	  if lchown() isn't available and configure is not being run as root
	- more header file changes for AIX
	- added :shescape query format type for strings, which prints strings
	  which will survive a single level of shell expansion
	- fixed --setperms and --setugids to handle empty packages and 
	  packages with odd filenames