@@ -1,13 +1,24 @@
 rpm alias --provides --qf '[%{PROVIDES}\n]'
 
-rpm alias --scripts --qf 'preinstall script:\n%{RPMTAG_PREIN}\
-postinstall script:\
-%{RPMTAG_POSTIN}\
-preuninstall script:\
-%{RPMTAG_PREUN}\
-postuninstall script: %{RPMTAG_POSTUN}\
-verify script:\
-%{VERIFYSCRIPT}\n'
+rpm alias --s2 --qf '\
+%|PREIN?{preinstall script\
+%|PREINPROG?{ (through %{PREINPROG})}|:\n%{PREIN}\n}:\
+{%|PREINPROG?{preinstall program: %{PREINPROG}\n}|}|\
+\
+%|POSTIN?{postinstall script\
+%|POSTINPROG?{ (through %{POSTINPROG})}|:\n%{POSTIN}\n}:\
+{%|POSTINPROG?{postinstall program: %{POSTINPROG}\n}|}|\
+\
+%|PREUN?{preuninstall script\
+%|PREUNPROG?{ (through %{PREUNPROG})}|:\n%{PREUN}\n}:\
+{%|PREUNPROG?{preuninstall program: %{PREUNPROG}\n}|}|\
+\
+%|POSTUN?{postuninstall script\
+%|POSTUNPROG?{ (through %{POSTUNPROG})}|:\n%{POSTUN}\n}:\
+{%|POSTUNPROG?{postuninstall program: %{POSTUNPROG}\n}|}|\
+\
+%|VERIFYSCRIPT?{verify script:\n%{VERIFYSCRIPT}\n}|\
+'
 
 rpm alias --setperms -q --qf '[%{FILEMODES:octal} %{FILENAMES:shescape}\n]' \
 		   --pipe "grep -v \(none\) | sed 's/^.../chmod /' | sh"
@@ -20,15 +31,15 @@ rpm alias --requires --qf \
 	    "[%{REQUIRENAME} %{REQUIREFLAGS:depflags} %{REQUIREVERSION}\n]"
 rpm alias -R --requires
 
-rpm alias --info --qf 'Name        : %-27{NAME} Distribution: %{DISTRIBUTION}\
-Version     : %-27{VERSION}       Vendor: %{VENDOR}\
-Release     : %-27{RELEASE}   Build Date: %{BUILDTIME:date}\
-Install date: %-27{INSTALLTIME:date}   Build Host: %{BUILDHOST}\
-Group       : %-27{GROUP}   Source RPM: %{SOURCERPM}\
-Size        : %{SIZE}\
-Packager    : %{PACKAGER}\
-URL         : %{URL}\
-Summary     : %{SUMMARY}\
+rpm alias --info --qf 'Name        : %-27{NAME} Distribution: %{DISTRIBUTION}\n\
+Version     : %-27{VERSION}       Vendor: %{VENDOR}\n\
+Release     : %-27{RELEASE}   Build Date: %{BUILDTIME:date}\n\
+Install date: %-27{INSTALLTIME:date}   Build Host: %{BUILDHOST}\n\
+Group       : %-27{GROUP}   Source RPM: %{SOURCERPM}\n\
+Size        : %{SIZE}\n\
+Packager    : %{PACKAGER}\n\
+URL         : %{URL}\n\
+Summary     : %{SUMMARY}\n\
 Description :\n%{DESCRIPTION}\n'
 
 rpm alias --changelog --qf '[* %{CHANGELOGTIME:day} %{CHANGELOGNAME}\n\n%{CHANGELOGTEXT}\n\n]'
