@@ -2,6 +2,8 @@
 	- implemented install time prerequisites
 	- repaired %{#TAG} query format
 	- implemented ternary operator as query expression
+	- fixed --scripts to only print information on scripts which
+	  are present
 
 2.4.1 -> 2.4.2:
 	- completely rewrote queryformat code
